--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8" />
   <title>Polishy</title>
   <script src="https://kit.fontawesome.com/b2a350ce67.js" crossorigin="anonymous"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
